--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@ title: Phoebe Farrelly
 </head>
 <body>
   <h1>Phoebe's Blog</h1>
+
+    <p>Hi, I’m Phoebe - A PwC tech degree apprentice, avid supporter of Women in Tech, and part of the internal team of CyberWomen Groups C.I.C.</p>
   <ul>
     {% for post in site.posts %}
       <li>
