--- a/index.html
+++ b/index.html
@@ -2,14 +2,9 @@
 layout: custom
 title: Phoebe Farrelly
 ---
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-    <p>Hi, I’m Phoebe - A PwC tech degree apprentice, avid supporter of Women in Tech, and part of the internal team of CyberWomen Groups C.I.C.</p>
+
+<p>Hi, I’m Phoebe — a PwC tech degree apprentice, avid supporter of Women in Tech, and part of the internal team of CyberWomen Groups C.I.C.</p>
+
 <ul>
   {% for post in site.posts %}
     <li>
@@ -17,5 +12,3 @@ title: Phoebe Farrelly
     </li>
   {% endfor %}
 </ul>
-</body>
-</html>
